--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <div class="container ">
 
       <div class="darcktheamseting">
-        <div class="btn">
+        <div class="btn" id="btnn" >
             <div class="btnsild "></div>
         </div>
 
-        <h4 class="lightblack">Light</h4>
+      <h4 class="lightblack">Light</h4>
       </div>
 
 
@@ -33,9 +33,10 @@
                   <input id="input_1" class="input_11" type="text">
 
                     <div class="contites">
-                        <div class="plus"> <img src="img/plus-small-svgrepo-com.svg" alt=""> </div>
+                        <button class="plus"> <img src="img/plus-small-svgrepo-com.svg" alt=""> </button>
                         <h4 id="quant">0</h4>
-                        <div class="mines"> <img src="img/minus-small-svgrepo-com.svg" alt=""> </div>
+                        
+                        <button class="mines"> <img src="img/minus-small-svgrepo-com.svg" alt=""> </button>
         
                     </div>
                   <input id="input_2" type="text">
@@ -48,7 +49,7 @@
              <div class="cartnumberbutton">
                 <div class="cart" >
                     <img src="img/green-shopping-cart-10909.svg" alt="">
-                    <div class="count   ">
+                    <div class="count">
                         <h4 id="cartlistno" >0</h4>
                     </div>
                     <h3><a style="text-decoration: none; color: rgb(177, 204, 122);"  href="#vist">View your list></a></h3>
